docs/docs/releases/0.0.50/home.md
[Home](https://chgibb.github.io/PHATDocs/)

The Pathogen Host Analysis Tool (PHAT) is an application for processing and analyzing next-generation sequencing (NGS) data as it relates to relationships between pathogen and host organisms. PHAT provides quality control (QC) reporting on sequence files, alignment of sequence files against reference files, alignment viewing and Excel and comma separated values (CSV) output.

PHAT is under development in the Zehbe Lab (http://zehbelab.weebly.com/) at the Thunder Bay Regional Health Research Institute (TBRHRI) and Lakehead University (LU) under the supervison of Dr. Ingeborg Zehbe. This work is supported by a Natural Sciences and Engineering Research Council of Canada (NSERC) Discovery grant to Dr. Ingeborg Zehbe (#RGPIN-2015-03855) and a NSERC Alexander Graham Bell Canada Graduate Scholarship-Doctoral (CGS-D) to Robert Jackson (#454402-2014).

Project Supervisor/Principal Investigator: Dr. Ingeborg Zehbe, LU/TBRHRI Research Chair & Senior Scientist
Project Lead/Biologist: Robert Jackson, PhD Biotech Candidate
Project Lead/Software Developer: Chris Gibb, HBSc Comp Sci Student
Team Member: Mitchell Pynn
Team Member: Shane Liu
Team Member: Jeremy Braun

# Documentation for 0.0.50
## Contents
1. [How to Get PHAT](https://chgibb.github.io/PHATDocs/docs/releases/0.0.50/howToGetPHAT)

### Application Architecture
1. [Overview](https://chgibb.github.io/PHATDocs/docs/releases/0.0.50/archOverview)

2. [Repository Structure](https://chgibb.github.io/PHATDocs/docs/releases/0.0.50/repoStructure)