docs/docs/releases/0.1.4/home.md
[Home](https://chgibb.github.io/PHATDocs/)

![HPV16 Coverage Plots](https://chgibb.github.io//PHATDocs/docs/releases/0.1.0-beta.1/covHPV16white.png)

The Pathogen-Host Analysis Tool (PHAT) is an application for processing and analyzing next-generation sequencing (NGS) data as it relates to relationships between pathogen and host organisms. PHAT provides quality control (QC) reporting on sequence files, alignment of sequence files against reference files, single-nucleotide polymorphism (SNP) prediction, linear and circular alignment viewing, and Excel and comma separated values (CSV) output.

![PHAT Tool Bar](https://chgibb.github.io//PHATDocs/docs/releases/0.1.4/PHATtoolbar.png)

PHAT is under development in the Zehbe Lab ([http://zehbelab.weebly.com/](http://zehbelab.weebly.com/)) at the Thunder Bay Regional Health Research Institute (TBRHRI) and Lakehead University (LU) under the supervison of Dr. Ingeborg Zehbe. This work is supported by a Natural Sciences and Engineering Research Council of Canada (NSERC) Discovery grant to Dr. Ingeborg Zehbe (#RGPIN-2015-03855) and a NSERC Alexander Graham Bell Canada Graduate Scholarship-Doctoral (CGS-D) to Robert Jackson (#454402-2014).

**Project Supervisor/Principal Investigator:** Dr. Ingeborg Zehbe, LU/TBRHRI Research Chair & Senior Scientist    
**Project Lead/Biologist:** Robert Jackson, PhD Biotech Candidate    
**Project Lead/Software Developer:** Chris Gibb, HBSc Comp Sci Student  
**Team Members:** Mitchell Pynn, Shane Liu, Jeremy Braun

[Third Party Licenses](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/thirdParty)

**How to Cite PHAT (pre-print):**

Gibb CM, Jackson R, Mohammed S, Fiaidhi J, Zehbe I. Pathogen-Host Analysis Tool (PHAT): an Integrative Platform to Analyze Pathogen-Host Relationships in Next-Generation Sequencing Data. bioRxiv. [https://doi.org/10.1101/178327](https://doi.org/10.1101/178327)

# Documentation for 0.1.4
## Contents
1. [How to Get PHAT](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/howToGetPHAT)
2. [Working With PHAT Projects](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/projects)
3. [Inputting Files](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/inputtingFiles)
4. [Running Quality Control (QC) Reports](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/QCReports)
5. [Running Alignments](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/runningAlignments)
6. [Reports and Analyses](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/reportsAndAnalyses)
7. [Circular Visualization](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/circularVisualization)

### Application Architecture
1. [Overview](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/archOverview)
2. [Contributing](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/contributingGuide)
3. [Repository Structure](https://chgibb.github.io/PHATDocs/docs/releases/0.1.4/repoStructure)
